Added OBM dynamic program

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -2,20 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import graph_generator as gg\n",
+    "import obm_dp as dp\n",
     "import numpy as np\n",
     "\n",
     "%load_ext autoreload\n",
@@ -24,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,47 +26,38 @@
     "    'scaling': 1/ np.sqrt(2)\n",
     "}\n",
     "\n",
-    "mat = gg.sample_bipartite_graph(5, 4, **config)"
+    "m = 5\n",
+    "n = 5\n",
+    "A = gg.sample_bipartite_graph(m, n, **config)\n",
+    "p = [1 for _ in range(m)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mat.shape[0]"
+    "cache = dp.cache_stochastic_opt(A, p)\n",
+    "coin_flips = [np.random.binomial(1, _p) for _p in p]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "mat.shape[1]"
+    "dp.stochastic_opt(A, coin_flips, cache)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dp.greedy(A, coin_flips)"
    ]
   },
   {
@@ -102,8 +85,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.3"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
