Corrected bug in BA graph generation

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -72,7 +72,7 @@
     "    data = []\n",
     "    for _ in range(num_graphs):\n",
     "        A = gg.sample_bipartite_graph(m, n, **kwargs)\n",
-    "        p = [0.75 for _ in range(n)]\n",
+    "        p = [0.75 for _ in range(m)]\n",
     "        cache = {}\n",
     "        cache = dp.cache_stochastic_opt(A, p)\n",
     "        layers, quantities = expected_quantities(cache, node_func, A)\n",
@@ -146,6 +146,44 @@
    "source": [
     "node_func = NODE_FUNCS['relative_entropy']\n",
     "analyze_dp(m, n, num_graphs, node_func, 'KL divergence with uniform', **config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = {\n",
+    "    'graph_type': 'BA',\n",
+    "    'ba_param': 4,\n",
+    "    'weighted': True\n",
+    "}\n",
+    "m = 10; n = 7\n",
+    "num_graphs = 250\n",
+    "node_func = NODE_FUNCS['greedy_suboptimality']\n",
+    "analyze_dp(m, n, num_graphs, node_func, 'Average fractional value-to-go reduction', **config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num_graphs = 250\n",
+    "node_func = NODE_FUNCS['uniform_suboptimality']\n",
+    "analyze_dp(m, n, num_graphs, node_func, 'Average fractional value-to-go reduction', **config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node_func = NODE_FUNCS['greedy_correctness']\n",
+    "analyze_dp(m, n, num_graphs, node_func, 'Fraction of correct decisions', **config)"
    ]
   },
   {
