Bug fix - DP tree analysis now limited to valid neighbor nodes

--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -22,52 +22,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = {\n",
-    "    'graph_type': 'GEOM',\n",
-    "    'threshold': 0.0,\n",
-    "    'scaling': 1/ np.sqrt(2)\n",
-    "}\n",
-    "\n",
-    "m = 5\n",
-    "n = 5\n",
-    "A = gg.sample_bipartite_graph(m, n, **config)\n",
-    "p = [1 for _ in range(m)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cache = dp.cache_stochastic_opt(A, p)\n",
-    "coin_flips = [np.random.binomial(1, _p) for _p in p]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dp.stochastic_opt(A, coin_flips, cache)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dp.greedy(A, coin_flips)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def monte_carlo_layer_quantity(m: int, n: int, num_graphs: int, node_func: callable, **kwargs):\n",
     "    data = []\n",
     "    for _ in range(num_graphs):\n",
@@ -113,7 +67,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_graphs = 100\n",
+    "config = {\n",
+    "    'graph_type': 'GEOM',\n",
+    "    'threshold': 0.0,\n",
+    "    'scaling': 1/ np.sqrt(2)\n",
+    "}\n",
+    "\n",
+    "m = 8\n",
+    "n = 8\n",
+    "A = gg.sample_bipartite_graph(m, n, **config)\n",
+    "p = [0.75 for _ in range(m)]\n",
+    "cache = dp.cache_stochastic_opt(A, p)\n",
+    "coin_flips = [np.random.binomial(1, _p) for _p in p]\n",
+    "\n",
+    "num_graphs = 1000\n",
     "node_func = NODE_FUNCS['greedy_suboptimality']\n",
     "analyze_dp(m, n, num_graphs, node_func, 'Average fractional value-to-go reduction', **config)"
    ]
@@ -159,8 +126,7 @@
     "    'ba_param': 4,\n",
     "    'weighted': True\n",
     "}\n",
-    "m = 10; n = 10\n",
-    "num_graphs = 1000\n",
+    "\n",
     "node_func = NODE_FUNCS['greedy_suboptimality']\n",
     "analyze_dp(m, n, num_graphs, node_func, 'Average fractional value-to-go reduction', **config)"
    ]
@@ -171,7 +137,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_graphs = 250\n",
     "node_func = NODE_FUNCS['uniform_suboptimality']\n",
     "analyze_dp(m, n, num_graphs, node_func, 'Average fractional value-to-go reduction', **config)"
    ]
@@ -184,6 +149,70 @@
    "source": [
     "node_func = NODE_FUNCS['greedy_correctness']\n",
     "analyze_dp(m, n, num_graphs, node_func, 'Fraction of correct decisions', **config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node_func = NODE_FUNCS['relative_entropy']\n",
+    "analyze_dp(m, n, num_graphs, node_func, 'KL divergence with uniform', **config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = {\n",
+    "    'graph_type': 'GEOM',\n",
+    "    'threshold': 0.6,\n",
+    "    'scaling': 1/ np.sqrt(2)\n",
+    "}\n",
+    "\n",
+    "m = 8\n",
+    "n = 8\n",
+    "A = gg.sample_bipartite_graph(m, n, **config)\n",
+    "p = [0.75 for _ in range(m)]\n",
+    "cache = dp.cache_stochastic_opt(A, p)\n",
+    "coin_flips = [np.random.binomial(1, _p) for _p in p]\n",
+    "\n",
+    "num_graphs = 1000\n",
+    "node_func = NODE_FUNCS['greedy_suboptimality']\n",
+    "analyze_dp(m, n, num_graphs, node_func, 'Average fractional value-to-go reduction', **config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node_func = NODE_FUNCS['uniform_suboptimality']\n",
+    "analyze_dp(m, n, num_graphs, node_func, 'Average fractional value-to-go reduction', **config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node_func = NODE_FUNCS['greedy_correctness']\n",
+    "analyze_dp(m, n, num_graphs, node_func, 'Fraction of correct decisions', **config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node_func = NODE_FUNCS['relative_entropy']\n",
+    "analyze_dp(m, n, num_graphs, node_func, 'KL divergence with uniform', **config)"
    ]
   },
   {
