GNN library refactoring

--- a/dp_analysis.ipynb
+++ b/dp_analysis.ipynb
@@ -112,9 +112,9 @@
     "        'weighted': True\n",
     "    },\n",
     "    {\n",
-    "        'label': 'GEOM(0.3)',\n",
+    "        'label': 'GEOM(0.2)',\n",
     "        'graph_type': 'GEOM',\n",
-    "        'threshold': 0.3,\n",
+    "        'threshold': 0.2,\n",
     "        'scaling': 1/ np.sqrt(2)\n",
     "    },\n",
     "    {\n",
@@ -124,6 +124,33 @@
     "        'scaling': 1/ np.sqrt(2)\n",
     "    }\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node_func = NODE_FUNCS['std']\n",
+    "means = []\n",
+    "errs = []\n",
+    "labels = []\n",
+    "for config in graph_configs:\n",
+    "    print(f\"Started {config['label']}\")\n",
+    "    layer, mean, err = analyze_dp(m, n, num_graphs, node_func, **config)\n",
+    "    means.append(mean)\n",
+    "    errs.append(err)\n",
+    "    labels.append(config['label'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_err(layer, means, errs, labels, 'Average fractional reduction to OPT')"
    ]
   },
   {
