--- a/notebooks/OBM_GNN.ipynb
+++ b/notebooks/OBM_GNN.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import os\n",
+    "os.chdir('..')\n",
     "\n",
     "import graph_generator as gg\n",
     "import algorithms as dp\n",
@@ -23,9 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyTorch has version 2.0.0+cu117\n",
+      "Using device: cuda\n"
+     ]
+    }
+   ],
    "source": [
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "print(\"PyTorch has version {}\".format(torch.__version__))\n",
@@ -120,14 +131,14 @@
     "    train_dataset_1,\n",
     "    batch_size=args['batch_size'],\n",
     "    shuffle=True,\n",
-    "    num_workers=16\n",
+    "    num_workers=4\n",
     ")\n",
     "\n",
     "test_loader_1 = DataLoader(\n",
     "    test_dataset_1,\n",
     "    batch_size=args['batch_size'],\n",
     "    shuffle=True,\n",
-    "    num_workers=16\n",
+    "    num_workers=4\n",
     ")\n",
     "\n",
     "train_loader_2 = DataLoader(\n",
