--- a/notebooks/dp_analysis.ipynb
+++ b/notebooks/dp_analysis.ipynb
@@ -2,12 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.chdir('..')\n",
+    "\n",
     "import graph_generator as gg\n",
-    "import obm_dp as dp\n",
+    "import algorithms as dp\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from dp_analysis import NODE_FUNCS, expected_quantities\n",
