Major refactor | changes to instance generation, meta-training, meta-evaluation

--- a/notebooks/dp_analysis.ipynb
+++ b/notebooks/dp_analysis.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "os.chdir('..')\n",
     "\n",
-    "import graph_generator as gg\n",
+    "import instance_generator as ig\n",
     "import algorithms as dp\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -21,16 +21,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def monte_carlo_layer_quantity(m: int, n: int, num_graphs: int, node_func: callable, **kwargs):\n",
     "    data = []\n",
-    "    for _ in range(num_graphs):\n",
-    "        A = gg.sample_bipartite_graph(m, n, **kwargs)\n",
-    "        p = [0.75 for _ in range(m)]\n",
-    "        cache = {}\n",
+    "    rng = np.random.default_rng()\n",
+    "    instances, _ = ig.sample_instances(m, n, num_graphs, rng, **kwargs)\n",
+    "    for (A, p) in instances:\n",
     "        cache = dp.cache_stochastic_opt(A, p)\n",
     "        layers, quantities = expected_quantities(cache, node_func, A)\n",
     "        data.append(quantities)\n",
@@ -87,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = 8; n = 8; num_graphs = 2500\n",
+    "m = 8; n = 8; num_graphs = 100\n",
     "\n",
     "graph_configs = [\n",
     "    {\n",
