--- a/notebooks/base_learner.ipynb
+++ b/notebooks/base_learner.ipynb
@@ -8,16 +8,16 @@
    "source": [
     "import torch\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "import os\n",
     "os.chdir('..')\n",
     "from torch_geometric.loader import DataLoader\n",
     "from gnn_library.util import train, save, load\n",
-    "from util import Dataset, objectview, collect\n",
     "from evaluate import evaluate_model, pp_output\n",
     "import instance_generator as ig\n",
     "import torch_converter as tc\n",
+    "import evaluate as ev\n",
+    "from util import Dataset\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -53,7 +53,7 @@
     "    'hidden_dim':        64,\n",
     "    'output_dim':        1,\n",
     "    'dropout':           0.35,\n",
-    "    'epochs':            50,\n",
+    "    'epochs':            25,\n",
     "    'opt':               'adam',\n",
     "    'opt_scheduler':     'none',\n",
     "    'opt_restart':       0,\n",
@@ -83,21 +83,17 @@
     "rng = np.random.default_rng()\n",
     "\n",
     "\n",
-    "train_instances, _ = collect(\n",
-    "    [\n",
-    "        ig.sample_instances(10, 6, train_num, rng, **er_config),\n",
-    "        ig.sample_instances(10, 6, train_num, rng, **ba_config),\n",
-    "        ig.sample_instances(10, 6, train_num, rng, **geom_config),\n",
+    "train_instances = [\n",
+    "        *ig.sample_instances(10, 6, train_num, rng, **er_config),\n",
+    "        *ig.sample_instances(10, 6, train_num, rng, **ba_config),\n",
+    "        *ig.sample_instances(10, 6, train_num, rng, **geom_config),\n",
     "    ]\n",
-    ")\n",
     "\n",
-    "test_instances, _ = collect(\n",
-    "    [\n",
-    "        ig.sample_instances(10, 6, test_num, rng, **er_config),\n",
-    "        ig.sample_instances(10, 6, test_num, rng, **ba_config),\n",
-    "        ig.sample_instances(10, 6, test_num, rng, **geom_config),\n",
+    "test_instances = [\n",
+    "        *ig.sample_instances(10, 6, test_num, rng, **er_config),\n",
+    "        *ig.sample_instances(10, 6, test_num, rng, **ba_config),\n",
+    "        *ig.sample_instances(10, 6, test_num, rng, **geom_config),\n",
     "    ]\n",
-    ")\n",
     "\n",
     "\n",
     "train_data = Dataset(tc._instances_to_gnn_train_samples(train_instances, args['head']))\n",
@@ -133,27 +129,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rng = np.random.default_rng(50)\n",
-    "eval_instances, coin_flips = ig.sample_instances(48, 16, 100, rng, **geom_config)\n",
-    "\n",
-    "ratios, log = evaluate_model(\n",
-    "    GNN,\n",
-    "    args,\n",
-    "    eval_instances,\n",
-    "    coin_flips,\n",
-    "    50,\n",
-    "    rng\n",
-    ")\n",
-    "\n",
-    "pp_output(ratios, log, show_log=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "save(GNN, args, 'GNN1')"
    ]
   },
@@ -163,56 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# num_trials = 500\n",
-    "# node_configs = [(x, 16) for x in np.arange(4, 64, 2)]\n",
-    "# # of nodes [20 -> 80]\n",
-    "# # of nodes in batch [10,000 -> 40,000]\n",
-    "# batch_size = 100 #[int(min(32, x + y)) for (x, y) in node_configs]\n",
-    "# graph_configs = [\n",
-    "#     # {\n",
-    "#     #     'graph_type': 'GM'\n",
-    "#     # },\n",
-    "#     {\n",
-    "#         'graph_type': 'ER',\n",
-    "#         'p': 0.75,\n",
-    "#         'weighted': True\n",
-    "#     },\n",
-    "#     {\n",
-    "#         'graph_type': 'BA',\n",
-    "#         'ba_param': 4,\n",
-    "#         'weighted': True\n",
-    "#     },\n",
-    "#     {\n",
-    "#         'graph_type': 'GEOM',\n",
-    "#         'threshold': 0.2,\n",
-    "#         'scaling': 1 / np.sqrt(2),\n",
-    "#     }\n",
-    "# ]\n",
-    "\n",
-    "# ratios = [x/y for (x,y) in node_configs]\n",
-    "# print(ratios)\n",
-    "# data = {config['graph_type']: [] for config in graph_configs}\n",
-    "# for graph_config in graph_configs:\n",
-    "#     for i, node_config in enumerate(node_configs):\n",
-    "#         (gnn1_learned_ratios, greedy_ratios), _ = batched_test_model(\n",
-    "#             GNN1,\n",
-    "#             device,\n",
-    "#             num_trials,\n",
-    "#             batch_size,\n",
-    "#             *node_config,\n",
-    "#             graph_config)\n",
-    "\n",
-    "#         (gnn2_learned_ratios, _), _ = batched_test_model(\n",
-    "#             GNN2,\n",
-    "#             device,\n",
-    "#             num_trials,\n",
-    "#             batch_size,\n",
-    "#             *node_config,\n",
-    "#             graph_config)\n",
-    "\n",
-    "#         data[graph_config['graph_type']].append(np.array(\n",
-    "#             [gnn1_learned_ratios, gnn2_learned_ratios, greedy_ratios]\n",
-    "#         ))"
+    "GNN, args = load('GNN1')"
    ]
   },
   {
@@ -221,141 +147,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for graph_type, comp_ratios in data.items():\n",
-    "#     greedy_avg_ratios = []\n",
-    "#     gnn1_avg_ratios = []\n",
-    "#     gnn2_avg_ratios = []\n",
-    "#     max_avg_ratios = []\n",
+    "seed = np.random.randint(0, 500000)\n",
+    "(m, n) = (48, 16)\n",
+    "config = er_config\n",
     "\n",
-    "#     for trial_ratios in comp_ratios:\n",
-    "#         gnn1_avg_ratios.append(np.array(trial_ratios[0]).mean())\n",
-    "#         gnn2_avg_ratios.append(np.array(trial_ratios[1]).mean())\n",
-    "#         greedy_avg_ratios.append(np.array(trial_ratios[2]).mean())\n",
-    "#         max_avg_ratios.append(np.array(np.max(trial_ratios, axis=0)).mean())\n",
+    "rng = np.random.default_rng(seed)\n",
+    "eval_instances = ig.sample_instances(m, n, 10, rng, **config)\n",
     "\n",
-    "#     print(graph_type)\n",
-    "#     fig = plt.figure(figsize=(8,6))\n",
-    "#     plt.title(graph_type)\n",
-    "#     plt.plot(ratios, gnn1_avg_ratios, label='GNN1')\n",
-    "#     plt.plot(ratios, gnn2_avg_ratios, label='GNN2')\n",
-    "#     plt.plot(ratios, greedy_avg_ratios, label='Greedy')\n",
-    "#     plt.plot(ratios, max_avg_ratios, label='MAX')\n",
-    "#     plt.xlabel('# online / # offline')\n",
-    "#     plt.ylabel('Average competitive ratio')\n",
-    "#     plt.legend()\n",
-    "#     plt.show()\n",
+    "ratios2 = evaluate_model(\n",
+    "    classify_model=None,\n",
+    "    eval_models=[GNN],\n",
+    "    args=args,\n",
+    "    instances=eval_instances,\n",
+    "    batch_size=50,\n",
+    "    rng=rng,\n",
+    "    num_realizations=5\n",
+    ")\n",
     "\n",
-    "\n",
-    "  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# num_trials = 250\n",
-    "# node_configs = [(32, x)) for x in np.arange(4, 33)]\n",
-    "# graph_configs = [\n",
-    "#     # {\n",
-    "#     #     'graph_type': 'GM'\n",
-    "#     # },\n",
-    "#     {\n",
-    "#         'graph_type': 'ER',\n",
-    "#         'p': 0.75,\n",
-    "#         'weighted': True\n",
-    "#     },\n",
-    "#     # {\n",
-    "#     #     'graph_type': 'BA',\n",
-    "#     #     'ba_param': 4,\n",
-    "#     #     'weighted': True\n",
-    "#     # },\n",
-    "#     # {\n",
-    "#     #     'graph_type': 'GEOM',\n",
-    "#     #     'threshold': 0.2,\n",
-    "#     #     'scaling': 1 / np.sqrt(2),\n",
-    "#     # }\n",
-    "# ]\n",
-    "\n",
-    "# output = {}\n",
-    "# # graph_config = {\n",
-    "# #     'graph_type': 'GM',\n",
-    "# # }\n",
-    "# for p in [0.05, 0.1, 0.15, 0.2]:\n",
-    "#     graph_config = {\n",
-    "#         'graph_type': 'ER',\n",
-    "#         'weighted': True,\n",
-    "#         'p': p\n",
-    "#     }\n",
-    "#     for node_config in node_configs:\n",
-    "#         out = test_model(trained_model, num_trials, *node_config, graph_config)\n",
-    "#         #output[f\"{graph_config['graph_type']}, {node_config}\"] = out\n",
-    "#         output[f\"{graph_config['graph_type']}(p={p}), {node_config}\"] = out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from matplotlib.ticker import AutoMinorLocator\n",
-    "# def format_dict(vals):\n",
-    "#    return dict(zip(\n",
-    "#             ['label', 'whislo', 'q1', 'med', 'q3', 'whishi'],\n",
-    "#             vals\n",
-    "#         ))\n",
-    "\n",
-    "# KHALIL = {\n",
-    "#   'ER(p=0.05), (30, 10)': format_dict(['Khalil', 0.66, 0.84, 0.895, 0.945, 1.0]),\n",
-    "#   'ER(p=0.1), (30, 10)': format_dict(['Khalil', 0.69, 0.83, 0.88, 0.93, 1.0]),\n",
-    "#   'ER(p=0.15), (30, 10)': format_dict(['Khalil', 0.71, 0.84, 0.89, 0.935, 1.0]),\n",
-    "#   'ER(p=0.2), (30, 10)': format_dict(['Khalil', 0.735, 0.855, 0.905, 0.94, 1.0]),\n",
-    "#   'ER(p=0.05), (60, 10)': format_dict(['Khalil', 0.685, 0.83, 0.88, 0.925, 1.0]),\n",
-    "#   'ER(p=0.1), (60, 10)': format_dict(['Khalil', 0.75, 0.86, 0.905, 0.935, 1.0]),\n",
-    "#   'ER(p=0.15), (60, 10)': format_dict(['Khalil', 0.79, 0.885, 0.93, 0.955, 1.0]),\n",
-    "#   'ER(p=0.2), (60, 10)': format_dict(['Khalil', 0.835, 0.91, 0.945, 0.965, 1.0]),\n",
-    "#   'ER(p=0.05), (100, 100)': format_dict(['Khalil', 0.83, 0.865, 0.875, 0.89, 0.94]),\n",
-    "#   'ER(p=0.1), (100, 100)': format_dict(['Khalil', 0.84, 0.87, 0.88, 0.895, 0.93]),\n",
-    "#   'ER(p=0.15), (100, 100)': format_dict(['Khalil', 0.86, 0.885, 0.905, 0.91, 0.955]),\n",
-    "#   'ER(p=0.2), (100, 100)': format_dict(['Khalil', 0.87, 0.905, 0.92, 0.935, 0.965]),\n",
-    "#   'GM, (30, 10)': format_dict(['Khalil', 0.7, 0.835, 0.87, 0.91, 1.0]),\n",
-    "#   'GM, (60, 10)': format_dict(['Khalil', 0.77, 0.865, 0.90, 0.915, 1.0]),\n",
-    "#   'GM, (100, 100)': format_dict(['Khalil', 0.83, 0.88, 0.89, 0.905, 0.94]),\n",
-    "# }\n",
-    "\n",
-    "# boxprops = dict(linestyle='-', linewidth=2, color='black')\n",
-    "# medianprops = dict(linestyle='-', linewidth=2, color='blue')\n",
-    "# for title, stats in output.items():\n",
-    "#     _, ax = plt.subplots(figsize=(6, 6))\n",
-    "#     ax.bxp([KHALIL[title], *stats], showfliers=False, boxprops=boxprops, medianprops=medianprops)\n",
-    "#     plt.title(title)\n",
-    "#     # Give plot a gray background like ggplot.\n",
-    "#     ax.set_facecolor('#EBEBEB')\n",
-    "#     # Remove border around plot.\n",
-    "#     [ax.spines[side].set_visible(False) for side in ax.spines]\n",
-    "#     # Style the grid.\n",
-    "#     ax.grid(which='major', color='white', linewidth=1.2)\n",
-    "#     ax.grid(which='minor', color='white', linewidth=0.6)\n",
-    "#     # Show the minor ticks and grid.\n",
-    "#     ax.minorticks_on()\n",
-    "#     # Now hide the minor ticks (but leave the gridlines).\n",
-    "#     ax.tick_params(which='minor', bottom=False, left=False)\n",
-    "\n",
-    "#     # Only show minor gridlines once in between major gridlines.\n",
-    "#     ax.xaxis.set_minor_locator(AutoMinorLocator(2))\n",
-    "#     ax.yaxis.set_minor_locator(AutoMinorLocator(2))\n",
-    "#     plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
+    "pp_output(ratios2, _, show_log=False)"
    ]
   }
  ],
