--- a/notebooks/meta_learner.ipynb
+++ b/notebooks/meta_learner.ipynb
@@ -16,7 +16,7 @@
     "from torch_geometric.loader import DataLoader\n",
     "from gnn_library.util import train, save, load\n",
     "from util import NumpyDataset, collect\n",
-    "from evaluate import evaluate_model, evaluate_meta_model, pp_output\n",
+    "from evaluate import evaluate_model, pp_output\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -49,7 +49,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_num = 100; test_num = 30\n",
+    "train_num = 50; test_num = 10\n",
     "\n",
     "er_config = {\n",
     "    'graph_type': 'ER',\n",
@@ -58,8 +58,8 @@
     "}\n",
     "ba_config = {\n",
     "    'graph_type': 'BA',\n",
-    "    'ba_param': 2,\n",
-    "    'weighted': True\n",
+    "    'ba_param': 4,\n",
+    "    'weighted': False\n",
     "}\n",
     "geom_config = {\n",
     "    'graph_type': 'GEOM',\n",
@@ -69,26 +69,35 @@
     "\n",
     "rng = np.random.default_rng()\n",
     "\n",
-    "train_instances, train_coin_flips = collect(\n",
-    "    [\n",
-    "        ig.sample_instances(10, 6, train_num, rng, **er_config),\n",
-    "        ig.sample_instances(10, 6, train_num, rng, **ba_config),\n",
-    "        ig.sample_instances(10, 6, train_num, rng, **geom_config),\n",
-    "    ]\n",
-    ")\n",
+    "train_instances = [\n",
+    "    *ig.sample_instances(6, 10, train_num, rng, **er_config),\n",
+    "    *ig.sample_instances(6, 10, train_num, rng, **ba_config),\n",
+    "    *ig.sample_instances(6, 10, train_num, rng, **geom_config),\n",
+    "    *ig.sample_instances(8, 8, train_num, rng, **er_config),\n",
+    "    *ig.sample_instances(8, 8, train_num, rng, **ba_config),\n",
+    "    *ig.sample_instances(8, 8, train_num, rng, **geom_config),\n",
+    "    *ig.sample_instances(10, 6, train_num, rng, **er_config),\n",
+    "    *ig.sample_instances(10, 6, train_num, rng, **ba_config),\n",
+    "    *ig.sample_instances(10, 6, train_num, rng, **geom_config)\n",
+    "]\n",
     "\n",
-    "test_instances, test_coin_flips = collect(\n",
-    "    [\n",
-    "        ig.sample_instances(10, 6, test_num, rng, **er_config),\n",
-    "        ig.sample_instances(10, 6, test_num, rng, **ba_config),\n",
-    "        ig.sample_instances(10, 6, test_num, rng, **geom_config),\n",
-    "    ]\n",
-    ")\n",
+    "\n",
+    "test_instances = [\n",
+    "    *ig.sample_instances(6, 10, test_num, rng, **er_config),\n",
+    "    *ig.sample_instances(6, 10, test_num, rng, **ba_config),\n",
+    "    *ig.sample_instances(6, 10, test_num, rng, **geom_config),\n",
+    "    *ig.sample_instances(8, 8, test_num, rng, **er_config),\n",
+    "    *ig.sample_instances(8, 8, test_num, rng, **ba_config),\n",
+    "    *ig.sample_instances(8, 8, test_num, rng, **geom_config),\n",
+    "    *ig.sample_instances(10, 6, test_num, rng, **er_config),\n",
+    "    *ig.sample_instances(10, 6, test_num, rng, **ba_config),\n",
+    "    *ig.sample_instances(10, 6, test_num, rng, **geom_config)\n",
+    "]\n",
+    "\n",
     "\n",
     "train_dataset = NumpyDataset(\n",
     "    tc._instances_to_nn_samples(\n",
     "        instances=train_instances,\n",
-    "        coin_flips=train_coin_flips,\n",
     "        models=[GNN1, GNN2],\n",
     "        args=args1,\n",
     "        batch_size=50,\n",
@@ -99,7 +108,6 @@
     "test_dataset = NumpyDataset(\n",
     "    tc._instances_to_nn_samples(\n",
     "        instances=test_instances,\n",
-    "        coin_flips=test_coin_flips,\n",
     "        models=[GNN1, GNN2],\n",
     "        args=args1,\n",
     "        batch_size=50,\n",
@@ -116,7 +124,7 @@
     "    'hidden_dim':        16,\n",
     "    'output_dim':        3,\n",
     "    'dropout':           0,\n",
-    "    'epochs':            1000,\n",
+    "    'epochs':            50,\n",
     "    'opt':               'adam',\n",
     "    'opt_scheduler':     'none',\n",
     "    'opt_restart':       0,\n",
@@ -146,7 +154,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "args = {\n",
+    "    'processor':         'NN',\n",
+    "    'head':              'meta',\n",
+    "    'num_layers':        5,\n",
+    "    'input_dim':         17,\n",
+    "    'batch_size':        4,\n",
+    "    'hidden_dim':        18,\n",
+    "    'output_dim':        3,\n",
+    "    'dropout':           0,\n",
+    "    'epochs':            50,\n",
+    "    'opt':               'adam',\n",
+    "    'opt_scheduler':     'none',\n",
+    "    'opt_restart':       0,\n",
+    "    'weight_decay':      5e-3,\n",
+    "    'lr':                0.0005,\n",
+    "    'device':            device\n",
+    "}\n",
     "\n",
     "_, _, META_NN, _ = train(train_loader, test_loader, args)"
    ]
@@ -175,20 +199,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rng = np.random.default_rng(50)\n",
-    "eval_instances, eval_coin_flips = ig.sample_instances(48, 16, 100, rng, **geom_config)\n",
+    "import evaluate as ev\n",
+    "seed = 0\n",
+    "(m, n) = (18, 6)\n",
+    "config = er_config\n",
     "\n",
-    "ratios1, log = evaluate_meta_model(\n",
+    "rng = np.random.default_rng(seed)\n",
+    "eval_instances = ig.sample_instances(m, n, 10, rng, **config)\n",
+    "\n",
+    "ratios1 = evaluate_model(\n",
     "    classify_model=META_NN,\n",
     "    eval_models=[GNN1, GNN2],\n",
     "    args=args,\n",
     "    instances=eval_instances,\n",
-    "    coin_flips=eval_coin_flips,\n",
     "    batch_size=50,\n",
-    "    rng=rng\n",
+    "    rng=rng,\n",
+    "    num_realizations=1\n",
     ")\n",
     "\n",
-    "pp_output(ratios1, log, show_log=True)"
+    "pp_output(ratios1, _, show_log=False)\n",
+    "print()\n",
+    "print()\n",
+    "\n",
+    "rng = np.random.default_rng(seed)\n",
+    "eval_instances = ig.sample_instances(m, n, 10, rng, **config)\n",
+    "\n",
+    "ratios2 = evaluate_model(\n",
+    "    classify_model=None,\n",
+    "    eval_models=[GNN1],\n",
+    "    args=args,\n",
+    "    instances=eval_instances,\n",
+    "    batch_size=50,\n",
+    "    rng=rng,\n",
+    "    num_realizations=10\n",
+    ")\n",
+    "\n",
+    "pp_output(ratios2, _, show_log=False)\n",
+    "\n",
+    "print()\n",
+    "print()\n",
+    "\n",
+    "rng = np.random.default_rng(seed)\n",
+    "eval_instances = ig.sample_instances(m, n, 10, rng, **config)\n",
+    "\n",
+    "ratios = evaluate_model(\n",
+    "    classify_model=None,\n",
+    "    eval_models=[GNN2],\n",
+    "    args=args,\n",
+    "    instances=eval_instances,\n",
+    "    batch_size=50,\n",
+    "    rng=rng,\n",
+    "    num_realizations=10\n",
+    ")\n",
+    "\n",
+    "pp_output(ratios, _, show_log=False)"
    ]
   },
   {
@@ -197,19 +261,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rng = np.random.default_rng(50)\n",
-    "eval_instances, eval_coin_flips = ig.sample_instances(48, 16, 100, rng, **geom_config)\n",
+    "(m, n) = (11, 16)\n",
+    "rng = np.random.default_rng(10)\n",
+    "eval_instances = ig.sample_instances(m, n, 10, rng, **er_config)\n",
     "\n",
-    "ratios2, log = evaluate_model(\n",
+    "X = tc._instances_to_nn_eval(eval_instances).to('cuda')\n",
+    "print(META_NN((X, None)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rng = np.random.default_rng(10)\n",
+    "eval_instances, eval_coin_flips = ig.sample_instances(32, 32, 10, rng, **ba_config)\n",
+    "\n",
+    "ratios1, log = evaluate_model(\n",
     "    model=GNN1,\n",
     "    args=args,\n",
     "    instances=eval_instances,\n",
     "    coin_flips=eval_coin_flips,\n",
     "    batch_size=50,\n",
     "    rng=rng\n",
-    ")\n",
-    "\n",
-    "pp_output(ratios2, log, show_log=True)"
+    ")"
    ]
   },
   {
@@ -218,19 +294,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rng = np.random.default_rng(50)\n",
-    "eval_instances, eval_coin_flips = ig.sample_instances(48, 16, 100, rng, **geom_config)\n",
+    "rng = np.random.default_rng(10)\n",
+    "eval_instances, eval_coin_flips = ig.sample_instances(32, 32, 10, rng, **ba_config)\n",
     "\n",
-    "ratios, log = evaluate_model(\n",
+    "ratios2, log = evaluate_model(\n",
     "    model=GNN2,\n",
     "    args=args,\n",
     "    instances=eval_instances,\n",
     "    coin_flips=eval_coin_flips,\n",
     "    batch_size=50,\n",
     "    rng=rng\n",
-    ")\n",
-    "\n",
-    "pp_output(ratios, log, show_log=True)"
+    ")"
    ]
   },
   {
@@ -239,11 +313,254 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rng = np.random.default_rng()\n",
-    "eval_instances, eval_coin_flips = ig.sample_instances(32, 32, 10, rng, **ba_config)\n",
+    "num_trials = 100\n",
+    "node_configs = [(x, 16) for x in np.arange(4, 64, 2)]\n",
+    "# of nodes [20 -> 80]\n",
+    "# of nodes in batch [10,000 -> 40,000]\n",
+    "batch_size = 100 #[int(min(32, x + y)) for (x, y) in node_configs]\n",
+    "graph_configs = [\n",
+    "    # {\n",
+    "    #     'graph_type': 'GM'\n",
+    "    # },\n",
+    "    {\n",
+    "        'graph_type': 'ER',\n",
+    "        'p': 0.75,\n",
+    "        'weighted': True\n",
+    "    },\n",
+    "    {\n",
+    "        'graph_type': 'BA',\n",
+    "        'ba_param': 4,\n",
+    "        'weighted': True\n",
+    "    },\n",
+    "    {\n",
+    "        'graph_type': 'GEOM',\n",
+    "        'threshold': 0.2,\n",
+    "        'scaling': 1 / np.sqrt(2),\n",
+    "    }\n",
+    "]\n",
     "\n",
-    "X = tc._instances_to_nn_eval(eval_instances).to('cuda')\n",
-    "print(META_NN((X, None)))\n"
+    "ratios = [x/y for (x,y) in node_configs]\n",
+    "print(ratios)\n",
+    "data = {config['graph_type']: [] for config in graph_configs}\n",
+    "for graph_config in graph_configs:\n",
+    "    for i, node_config in enumerate(node_configs):\n",
+    "        seed = np.random.randint(0, 500000)\n",
+    "        rng = np.random.default_rng(seed)\n",
+    "        instances = ig.sample_instances(*node_config, num_trials, rng, **graph_config)\n",
+    "\n",
+    "        rng = np.random.default_rng(seed)\n",
+    "        (meta_learned_ratios, _), _ = evaluate_meta_model(\n",
+    "            classify_model=META_NN,\n",
+    "            eval_models=[GNN1, GNN2],\n",
+    "            args=args,\n",
+    "            instances=instances,\n",
+    "            batch_size=50,\n",
+    "            rng=rng,\n",
+    "            \n",
+    "        )\n",
+    "\n",
+    "        rng = np.random.default_rng(seed)\n",
+    "        (gnn1_learned_ratios, greedy_ratios), _ = evaluate_model(\n",
+    "            GNN1,\n",
+    "            args,\n",
+    "            instances,\n",
+    "            batch_size,\n",
+    "            rng,\n",
+    "            num_realizations=1\n",
+    "            )\n",
+    "\n",
+    "        rng = np.random.default_rng(seed)\n",
+    "        (gnn2_learned_ratios, _), _ = evaluate_model(\n",
+    "            GNN2,\n",
+    "            args,\n",
+    "            instances,\n",
+    "            batch_size,\n",
+    "            rng,\n",
+    "            num_realizations=1\n",
+    "        )\n",
+    "\n",
+    "        # print(np.array(\n",
+    "        #     [\n",
+    "        #         meta_learned_ratios,\n",
+    "        #         gnn1_learned_ratios,\n",
+    "        #         gnn2_learned_ratios,\n",
+    "        #         greedy_ratios\n",
+    "        #     ]\n",
+    "        # ))\n",
+    "        data[graph_config['graph_type']].append(np.array(\n",
+    "            [\n",
+    "                meta_learned_ratios,\n",
+    "                gnn1_learned_ratios,\n",
+    "                gnn2_learned_ratios,\n",
+    "                greedy_ratios\n",
+    "            ]\n",
+    "        ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "for graph_type, comp_ratios in data.items():\n",
+    "    greedy_avg_ratios = []\n",
+    "    meta_avg_ratios = []\n",
+    "    gnn1_avg_ratios = []\n",
+    "    gnn2_avg_ratios = []\n",
+    "    max_avg_ratios = []\n",
+    "\n",
+    "    for trial_ratios in comp_ratios:\n",
+    "        meta_avg_ratios.append(np.array(trial_ratios[0]).mean())\n",
+    "        gnn1_avg_ratios.append(np.array(trial_ratios[1]).mean())\n",
+    "        gnn2_avg_ratios.append(np.array(trial_ratios[2]).mean())\n",
+    "        greedy_avg_ratios.append(np.array(trial_ratios[3]).mean())\n",
+    "        max_avg_ratios.append(np.array(np.max(trial_ratios[:, 1:], axis=0)).mean())\n",
+    "\n",
+    "    print(graph_type)\n",
+    "    fig = plt.figure(figsize=(8,6))\n",
+    "    plt.title(graph_type)\n",
+    "    plt.plot(ratios, gnn1_avg_ratios, label='GNN1')\n",
+    "    plt.plot(ratios, gnn2_avg_ratios, label='GNN2')\n",
+    "    plt.plot(ratios, greedy_avg_ratios, label='Greedy')\n",
+    "    plt.plot(ratios, max_avg_ratios, label='MAX')\n",
+    "    plt.plot(ratios, meta_avg_ratios, label='META')\n",
+    "    plt.xlabel('# online / # offline')\n",
+    "    plt.ylabel('Average competitive ratio')\n",
+    "    plt.legend()\n",
+    "    plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seed = np.random.randint(0, 500000)\n",
+    "rng = np.random.default_rng(seed)\n",
+    "\n",
+    "ba_config = {\n",
+    "    'graph_type': 'BA',\n",
+    "    'ba_param': 2,\n",
+    "    'weighted': False\n",
+    "}\n",
+    "\n",
+    "instances = ig.sample_instances(*(12, 8), 100, rng, **ba_config)\n",
+    "batch_size = 50\n",
+    "\n",
+    "rng = np.random.default_rng(seed)\n",
+    "(gnn1_learned_ratios, greedy_ratios), _ = evaluate_model(\n",
+    "    GNN1,\n",
+    "    args,\n",
+    "    instances,\n",
+    "    batch_size,\n",
+    "    rng,\n",
+    "    num_realizations=1\n",
+    "    )\n",
+    "\n",
+    "rng = np.random.default_rng(seed)\n",
+    "(gnn2_learned_ratios, _), _ = evaluate_model(\n",
+    "    GNN2,\n",
+    "    args,\n",
+    "    instances,\n",
+    "    batch_size,\n",
+    "    rng,\n",
+    "    num_realizations=1\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comp = np.vstack([gnn1_learned_ratios, gnn2_learned_ratios, greedy_ratios]).T\n",
+    "comp[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(np.max(comp, axis=1).mean())\n",
+    "print(comp.mean(axis=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index2 = np.argmax(comp[:, 1] - comp[:, 0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "index1 = np.argmax(comp[:, 0] - comp[:, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tc._featurize(instances[index1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tc._featurize(instances[index2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "GNN2_features = []\n",
+    "GNN1_features = []\n",
+    "for i, boolean in enumerate(comp[:, 1] > comp[:, 0]):\n",
+    "    if boolean:\n",
+    "        GNN2_features.append(tc._featurize(instances[i]))\n",
+    "    else:\n",
+    "        GNN1_features.append(tc._featurize(instances[i]))\n",
+    "\n",
+    "out1 = np.vstack(GNN1_features)\n",
+    "out2 = np.vstack(GNN2_features)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out1.mean(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out2.mean(axis=0)"
    ]
   },
   {
