Unified train instance generation for meta models

--- a/notebooks/base_learner.ipynb
+++ b/notebooks/base_learner.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "device = torch.device('cuda:2' if torch.cuda.is_available() else 'cpu')\n",
     "print(\"PyTorch has version {}\".format(torch.__version__))\n",
     "print('Using device:', device)"
    ]
@@ -96,8 +96,8 @@
     "    ]\n",
     "\n",
     "\n",
-    "train_data = Dataset(tc._instances_to_gnn_train_samples(train_instances, args['head']))\n",
-    "test_data = Dataset(tc._instances_to_gnn_train_samples(test_instances, args['head']))\n",
+    "train_data = Dataset(tc._instances_to_train_samples(train_instances, args['head']))\n",
+    "test_data = Dataset(tc._instances_to_train_samples(test_instances, args['head']))\n",
     "\n",
     "train_loader = DataLoader(\n",
     "    train_data,\n",
@@ -129,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save(GNN, args, 'GNN1')"
+    "save(GNN, args, 'test_GNN')"
    ]
   },
   {
@@ -138,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GNN, args = load('GNN1')"
+    "GNN, args = load('test_GNN', device)"
    ]
   },
   {
@@ -155,9 +155,9 @@
     "eval_instances = ig.sample_instances(m, n, 10, rng, **config)\n",
     "\n",
     "ratios2 = evaluate_model(\n",
-    "    classify_model=None,\n",
-    "    eval_models=[GNN],\n",
-    "    args=args,\n",
+    "    meta_model=None,\n",
+    "    meta_model_type=None,\n",
+    "    base_models=[GNN],\n",
     "    instances=eval_instances,\n",
     "    batch_size=50,\n",
     "    rng=rng,\n",
