Added instance-wise GNN training for meta learner

--- a/notebooks/base_learner.ipynb
+++ b/notebooks/base_learner.ipynb
@@ -84,15 +84,15 @@
     "\n",
     "\n",
     "train_instances = [\n",
-    "        *ig.sample_instances(10, 6, train_num, rng, **er_config),\n",
-    "        *ig.sample_instances(10, 6, train_num, rng, **ba_config),\n",
-    "        *ig.sample_instances(10, 6, train_num, rng, **geom_config),\n",
+    "        *ig.sample_instances(12, 9, train_num, rng, **er_config),\n",
+    "        *ig.sample_instances(12, 9, train_num, rng, **ba_config),\n",
+    "        *ig.sample_instances(12, 9, train_num, rng, **geom_config),\n",
     "    ]\n",
     "\n",
     "test_instances = [\n",
-    "        *ig.sample_instances(10, 6, test_num, rng, **er_config),\n",
-    "        *ig.sample_instances(10, 6, test_num, rng, **ba_config),\n",
-    "        *ig.sample_instances(10, 6, test_num, rng, **geom_config),\n",
+    "        *ig.sample_instances(12, 9, test_num, rng, **er_config),\n",
+    "        *ig.sample_instances(12, 9, test_num, rng, **ba_config),\n",
+    "        *ig.sample_instances(12, 9, test_num, rng, **geom_config),\n",
     "    ]\n",
     "\n",
     "\n",
@@ -129,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save(GNN, args, 'test_GNN')"
+    "save(GNN, args, 'GNN3')"
    ]
   },
   {
