Added trained models, monte carlo value-to-go estimation code

--- a/notebooks/base_learner.ipynb
+++ b/notebooks/base_learner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,9 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PyTorch has version 2.0.0+cu117\n",
+      "Using device: cuda:2\n"
+     ]
+    }
+   ],
    "source": [
     "device = torch.device('cuda:2' if torch.cuda.is_available() else 'cpu')\n",
     "print(\"PyTorch has version {}\".format(torch.__version__))\n",
@@ -36,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,15 +93,15 @@
     "\n",
     "\n",
     "train_instances = [\n",
-    "        *ig.sample_instances(12, 9, train_num, rng, **er_config),\n",
-    "        *ig.sample_instances(12, 9, train_num, rng, **ba_config),\n",
-    "        *ig.sample_instances(12, 9, train_num, rng, **geom_config),\n",
+    "        *ig.sample_instances(9, 7, train_num, rng, **er_config),\n",
+    "        *ig.sample_instances(9, 7, train_num, rng, **ba_config),\n",
+    "        *ig.sample_instances(9, 7, train_num, rng, **geom_config),\n",
     "    ]\n",
     "\n",
     "test_instances = [\n",
-    "        *ig.sample_instances(12, 9, test_num, rng, **er_config),\n",
-    "        *ig.sample_instances(12, 9, test_num, rng, **ba_config),\n",
-    "        *ig.sample_instances(12, 9, test_num, rng, **geom_config),\n",
+    "        *ig.sample_instances(9, 7, test_num, rng, **er_config),\n",
+    "        *ig.sample_instances(9, 7, test_num, rng, **ba_config),\n",
+    "        *ig.sample_instances(9, 7, test_num, rng, **geom_config),\n",
     "    ]\n",
     "\n",
     "\n",
@@ -116,16 +125,400 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:   0%|          | 0/25 [00:00<?, ?Epochs/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10291066506606346\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:   4%|▍         | 1/25 [00:02<01:05,  2.75s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST LOSS: 0.06727086007595062\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:   8%|▊         | 2/25 [00:04<00:53,  2.34s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0639278085572676\n",
+      "0.04505072483092988\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  12%|█▏        | 3/25 [00:07<00:56,  2.55s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST LOSS: 0.03116420842707157\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  16%|█▌        | 4/25 [00:09<00:48,  2.29s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.03660079889135872\n",
+      "0.03242848244834279\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  20%|██        | 5/25 [00:11<00:47,  2.36s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST LOSS: 0.024624736979603767\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  24%|██▍       | 6/25 [00:13<00:41,  2.19s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.029672764421951388\n",
+      "0.02628691123884558\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  28%|██▊       | 7/25 [00:16<00:41,  2.29s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST LOSS: 0.021705593913793564\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  32%|███▏      | 8/25 [00:18<00:36,  2.17s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.025080816877101335\n",
+      "0.022262447272486652\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  36%|███▌      | 9/25 [00:20<00:36,  2.31s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST LOSS: 0.016465285792946815\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  40%|████      | 10/25 [00:22<00:32,  2.13s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.02086506172309856\n",
+      "0.019566667544693665\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  44%|████▍     | 11/25 [00:25<00:32,  2.29s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST LOSS: 0.015860730782151222\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  48%|████▊     | 12/25 [00:27<00:29,  2.25s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.01898238259678627\n",
+      "0.017794555082345592\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  52%|█████▏    | 13/25 [00:30<00:28,  2.38s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST LOSS: 0.013727412559092045\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  56%|█████▌    | 14/25 [00:31<00:24,  2.19s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.016856952022303157\n",
+      "0.016472969990168434\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  60%|██████    | 15/25 [00:34<00:23,  2.36s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST LOSS: 0.013300866819918156\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  64%|██████▍   | 16/25 [00:36<00:20,  2.30s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.015285684607773629\n",
+      "0.015309341834840196\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  68%|██████▊   | 17/25 [00:39<00:19,  2.44s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST LOSS: 0.011798766441643238\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  72%|███████▏  | 18/25 [00:41<00:15,  2.26s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.014936636793959006\n",
+      "0.014485554334422559\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  76%|███████▌  | 19/25 [00:43<00:14,  2.36s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST LOSS: 0.011897599324584007\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  80%|████████  | 20/25 [00:45<00:11,  2.22s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.013873385055170905\n",
+      "0.014044516210776365\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  84%|████████▍ | 21/25 [00:48<00:09,  2.32s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST LOSS: 0.010904124937951565\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  88%|████████▊ | 22/25 [00:50<00:06,  2.21s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.013700027833997215\n",
+      "0.01332170740029764\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  92%|█████████▏| 23/25 [00:52<00:04,  2.31s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST LOSS: 0.01019977405667305\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training:  96%|█████████▌| 24/25 [00:54<00:02,  2.16s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.012718850244957152\n",
+      "0.012588007239188022\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Training: 100%|██████████| 25/25 [00:57<00:00,  2.30s/Epochs]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEST LOSS: 0.00998975895345211\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "_, _, GNN, _ = train(train_loader, test_loader, args)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,12 +536,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([0]), array([50]))\n",
+      "-- Competitive ratios --\n",
+      "GNN: 0.944\n",
+      "Greedy: 0.9943\n"
+     ]
+    }
+   ],
    "source": [
     "seed = np.random.randint(0, 500000)\n",
-    "(m, n) = (48, 16)\n",
+    "(m, n) = (8, 16)\n",
     "config = er_config\n",
     "\n",
     "rng = np.random.default_rng(seed)\n",
@@ -166,6 +570,13 @@
     "\n",
     "pp_output(ratios2, _, show_log=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -184,7 +595,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
