Added LP-rounding benchmark

--- a/notebooks/meta_learner.ipynb
+++ b/notebooks/meta_learner.ipynb
@@ -1577,7 +1577,7 @@
     "        instances = ig.sample_instances(*node_config, num_trials, rng, **graph_config)\n",
     "\n",
     "        rng = np.random.default_rng(seed)\n",
-    "        (meta_learned_ratios, _) = evaluate_model(\n",
+    "        (meta_learned_ratios, _, _) = evaluate_model(\n",
     "            meta_model=META_GNN,\n",
     "            meta_model_type='gnn',\n",
     "            base_models=[GNN1, GNN2],\n",
@@ -1588,7 +1588,7 @@
     "        )\n",
     "\n",
     "        rng = np.random.default_rng(seed)\n",
-    "        gnn1_learned_ratios, greedy_ratios = evaluate_model(\n",
+    "        gnn1_learned_ratios, greedy_ratios, lp_match_ratios = evaluate_model(\n",
     "            meta_model=None,\n",
     "            meta_model_type=None,\n",
     "            base_models=[GNN1],\n",
@@ -1599,7 +1599,7 @@
     "        )\n",
     "\n",
     "        rng = np.random.default_rng(seed)\n",
-    "        gnn2_learned_ratios, _ = evaluate_model(\n",
+    "        gnn2_learned_ratios, _, _ = evaluate_model(\n",
     "            meta_model=None,\n",
     "            meta_model_type=None,\n",
     "            base_models=[GNN2],\n",
@@ -1615,7 +1615,8 @@
     "                meta_learned_ratios,\n",
     "                gnn1_learned_ratios,\n",
     "                gnn2_learned_ratios,\n",
-    "                greedy_ratios\n",
+    "                greedy_ratios,\n",
+    "                lp_match_ratios\n",
     "            ]\n",
     "        ))"
    ]
