Moved baselines from explicit arrays to dict

--- a/notebooks/meta_learner.ipynb
+++ b/notebooks/meta_learner.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,6 @@
     "from evaluate import evaluate_model, pp_output\n",
     "import evaluate as ev\n",
     "from gnn_library.OBM_greedy import OBM_Greedy\n",
-    "#import evaluate as ev\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -27,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1010,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1176,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1184,18 +1183,17 @@
      "output_type": "stream",
      "text": [
       "-- Competitive ratios --\n",
-      "GNN: 0.9581\n",
-      "Greedy: 0.9095\n",
+      "learned: 0.967\n",
+      "greedy: 0.9771\n",
+      "lp_rounding: 0.9167\n",
       "\n",
       "\n",
       "-- Competitive ratios --\n",
-      "GNN: 0.9543\n",
-      "Greedy: 0.9095\n",
+      "learned: 0.9563\n",
       "\n",
       "\n",
       "-- Competitive ratios --\n",
-      "GNN: 0.9468\n",
-      "Greedy: 0.9095\n"
+      "learned: 0.96\n"
      ]
     }
    ],
@@ -1215,10 +1213,11 @@
     "    instances=eval_instances,\n",
     "    batch_size=500,\n",
     "    rng=rng,\n",
-    "    num_realizations=10\n",
+    "    num_realizations=10,\n",
+    "    baselines=['greedy', 'lp_rounding']\n",
     ")\n",
     "\n",
-    "pp_output(ratios1, _, show_log=False)\n",
+    "pp_output(ratios1)\n",
     "print()\n",
     "print()\n",
     "\n",
@@ -1234,7 +1233,7 @@
     "    num_realizations=10\n",
     ")\n",
     "\n",
-    "pp_output(ratios2, _, show_log=False)\n",
+    "pp_output(ratios2)\n",
     "\n",
     "print()\n",
     "print()\n",
@@ -1251,7 +1250,7 @@
     "    num_realizations=10\n",
     ")\n",
     "\n",
-    "pp_output(ratios, _, show_log=False)"
+    "pp_output(ratios)"
    ]
   },
   {
